# Bridge-Event-Parser-Service

./: Cargo.toml  justfile
.github/workflows/: ci.yml
