[package]
name = "bridge-event-parser-service"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "REST API for bridge event parsing and normalized JSON delivery"

[[bin]]
name = "bridge-event-parser-service"
path = "src/main.rs"

[dependencies]
bridge-parsers = { git = "https://github.com/bridge-craftwork/Bridge-Parsers" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2.0"
urlencoding = "2.1"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
